--- a/version-control/slides/custom.css
+++ b/version-control/slides/custom.css
@@ -34,3 +34,17 @@ a, a > code {
   background-size: cover;
   border-top: 0;
 }
+
+img[alt=final] { width: 400px; }
+
+
+
+.large-left-column {
+  color: #000;
+  width: 80%;
+  height: 92%;
+  float: left;
+}
+.large-left-column h2:last-of-type, .left-column h3:last-child {
+  color: #000;
+}
