--- a/slides/custom.css
+++ b/slides/custom.css
@@ -66,3 +66,14 @@ img[alt=atlassian] { width: 500px; margin: 0 150px;}
   float: right;
   width: 30%;
 }
+
+.custom-code {
+  background: #F5F5F5; /* lighter */
+  /* background: #e7e8e2; /* darker */
+  border-radius: 5px;
+  padding: 5px 20px;
+  font-family: 'Courier', 'Fira Code', monospace;
+  font-weight: 500;
+}
+
+
