added slides to reproducibility

--- a/slides/custom.css
+++ b/slides/custom.css
@@ -49,6 +49,7 @@ img[alt=atlassian] { width: 500px; margin: 0 150px;}
 img[alt=zenodo] {margin: 100px 0;}
 img[alt=codequality] {margin: 100px 50px;}
 img[alt=goodcode] {width: 350px;}
+img[alt=release] {width: 450px;}
 
 
 .large-left-column {
