--- a/slides/custom.css
+++ b/slides/custom.css
@@ -50,7 +50,7 @@ img[alt=zenodo] {margin: 100px 0;}
 img[alt=codequality] {margin: 100px 50px;}
 img[alt=goodcode] {width: 350px;}
 img[alt=release] {width: 450px;}
-img[alt=errormanagement] {height: 500px; margin: 20px 80px;}
+img[alt=errormanagement] {width: 800px; margin: 20px;}
 
 
 .large-left-column {
