exercises on expectations amended

--- a/slides/custom.css
+++ b/slides/custom.css
@@ -51,6 +51,7 @@ img[alt=codequality] {margin: 100px 50px;}
 img[alt=goodcode] {width: 350px;}
 img[alt=release] {width: 450px;}
 img[alt=errormanagement] {width: 800px; margin: 20px;}
+img[alt=nouser] {height: 300px;}
 
 
 .large-left-column {
