Moved some slides around and cosmetic edits

--- a/slides/custom.css
+++ b/slides/custom.css
@@ -56,7 +56,7 @@ img[alt=atlassian] { width: 500px; margin: 0 150px;}
 img[alt=zenodo] {margin: 100px 0;}
 img[alt=codequality] {margin: 100px 50px;}
 img[alt=goodcode] {width: 350px;}
-img[alt=release] {width: 450px;}
+img[alt=release] {width: 300px; margin: 0 50px;}
 img[alt=errormanagement] {width: 800px; margin: 20px;}
 img[alt=nouser] {height: 300px;}
 
