add dependency info and reproducibility tradeoff

--- a/slides/custom.css
+++ b/slides/custom.css
@@ -61,7 +61,8 @@ img[alt=goodcode] {width: 350px;}
 img[alt=release] {width: 400px; margin: 0 50px;}
 img[alt=errormanagement] {width: 800px; margin: 20px;}
 img[alt=nouser] {height: 300px;}
-img[alt=compendium] {height: 480px;}
+img[alt=compendium] {margin: -20px 350px; height: 400px;}
+img[alt=dependencies] {margin: -80px 200px; height: 350px;}
 
 
 .large-left-column {
