update scss styling

--- a/book/styles/theme-dark.scss
+++ b/book/styles/theme-dark.scss
@@ -1,7 +1,7 @@
 /*-- scss:defaults --*/
   // Base document colors
-$body-bg: #101519;
-  $body-color: #e3e3e3;
+$body-bg: #292b2c;
+  $body-color: #f6f6f6;
 $link-color: #C00A35;
 $sidebar-bg: #FFCD00;
   
