--- a/book/styles/uu.scss
+++ b/book/styles/uu.scss
@@ -13,6 +13,9 @@ $h1-font-size: 3.0em !default;
 $h2-font-size: 2.7em !default;
 $h3-font-size: 2.15em !default;
 
+section.slide h1 {
+  margin-left: 5vw;
+}
 
 section.slide h2 {
   color: black !important;
@@ -24,8 +27,14 @@ section.slide h2 {
   padding-right: 20vw;
   padding-top: 30px;
   padding-bottom: 10px;
+  margin-left: 5vw;
 }
 
+.theme-section {
+  text-align: left;
+  margin-top: 1.2em;
+  margin-left: 5vw;
+}
 
 
 //code
@@ -46,11 +55,14 @@ $presentation-font-size-root: 35px;
 /*-- scss:rules --*/
 .reveal pre code {
   background-color: #FFFFFF;
-  font-size: 1em;
-  padding: 0.5em;
-  line-height: 1.2em;
+  font-size: 0.8em;
+  padding: 0.4em;
+  margin: 0.2em;
 }
 
+.cell {
+  margin: 1em; // This adds spacing of 1em around the code cells
+}
 
 .subtitle {
   color: #000000;
