--- a/book/styles/uu.scss
+++ b/book/styles/uu.scss
@@ -108,8 +108,8 @@ section.has-dark-background a, section.has-dark-background a:hover {
 .slide-logo {
   display: block !important;
   position: fixed !important;
-  bottom: 0 !important;
-  left: 10px !important;
+  top: 0% !important;
+  left: 80% !important;
   max-height: 10% !important;
   height: 100% !important;
   width: auto !important;
